- added latest source files for implementing split comparison folder viewing. non-functional as this point

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,8 @@ add_library(ShellTabs SHARED
     src/Utilities.cpp
     src/GitStatus.cpp
     src/Logging.cpp
+    src/SplitHost.cpp
+    src/ExplorerPane.cpp 
     src/resource.rc
 )
 
