Hook filename colorization into common dialogs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,8 @@ add_library(ShellTabs SHARED
     src/TabBandWindow.cpp
     src/TabManager.cpp
     src/FileColorOverrides.cpp
+    src/NameColorProvider.cpp
+    src/CommonDialogColorizer.cpp
     src/FolderViewColorizer.cpp
     src/BrowserEvents.cpp
     src/Guids.cpp
