Hook DrawThemeText to force red list view text

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ add_library(ShellTabs SHARED
     src/OptionsStore.cpp
     src/OptionsDialog.cpp
     src/Utilities.cpp
+    src/ThemeHooks.cpp
     src/GitStatus.cpp
     src/Logging.cpp
     src/ExplorerPane.cpp
