Add Explorer context menu command to open folders in new tabs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library(ShellTabs SHARED
     src/TabBand.cpp
     src/TabBandWindow.cpp
     src/TabManager.cpp
+    src/OpenFolderCommand.cpp
     src/BrowserEvents.cpp
     src/Guids.cpp
     src/Module.cpp
