--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,8 @@ add_library(ShellTabs SHARED
     src/OptionsStore.cpp
     src/OptionsDialog.cpp
     src/ShellTabsMessages.cpp
+    src/TaskbarProxyWindow.cpp
+    src/TaskbarTabController.cpp
     src/Utilities.cpp
     src/Logging.cpp
     src/resource.rc
