Refactor preview overlay and extend taskbar popup hover

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ add_library(ShellTabs SHARED
     src/TabBandWindow.cpp
     src/TabManager.cpp
     src/PreviewCache.cpp
+    src/PreviewOverlay.cpp
     src/OpenFolderCommand.cpp
     src/BrowserEvents.cpp
     src/BackgroundCache.cpp
