Add shared icon cache and invalidate on tab changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ add_library(ShellTabs SHARED
     src/TabManager.cpp
     src/PreviewCache.cpp
     src/PreviewOverlay.cpp
+    src/IconCache.cpp
     src/OpenFolderCommand.cpp
     src/BrowserEvents.cpp
     src/BackgroundCache.cpp
