Add context menu editor page to options dialog

--- a/src/resource.rc
+++ b/src/resource.rc
@@ -33,6 +33,11 @@ END
 STRINGTABLE
 BEGIN
     IDS_PROJNAME "Shell Tabs"
+    IDS_OPTIONS_PAGE_GENERAL "General"
+    IDS_OPTIONS_PAGE_CUSTOMIZATIONS "Customizations"
+    IDS_OPTIONS_PAGE_CONTEXT_MENUS "Context Menus"
+    IDS_OPTIONS_PAGE_GLOW "Glow"
+    IDS_OPTIONS_PAGE_GROUPS "Groups && Islands"
 END
 
 CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "ShellTabs.manifest"
